# mlops-ci-cd-exercise

./: .gitignore  Dockerfile.dev  pyproject.toml  sam-template.yaml
.github/workflows/: ci-cd.yml
app/: app.py
scripts/: download_artifacts.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py  settings.py
tests/: mock_config.yml  test_settings.py
